--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
         "tailwindcss": "^3.0.23",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
-        "vue-template-compiler": "^2.6.12"
+        "vue-template-compiler": "^2.6.12",
+        "vuex": "^4.0.2"
     },
     "dependencies": {
         "materialize-css": "^1.0.0-rc.2",
-        "vue-router": "^3.5.1",
-        "vuex": "^4.0.2"
+        "vue-router": "^3.5.1"
     }
 }
