--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "materialize-css": "^1.0.0-rc.2",
-        "vue-router": "^3.5.1"
+        "vue-router": "^3.5.1",
+        "vuedraggable": "^2.24.3"
     }
 }
