--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vuex": "^3.4.0"
     },
     "dependencies": {
+        "cropperjs": "^1.5.12",
         "materialize-css": "^1.0.0-rc.2",
         "vue-router": "^3.5.1",
         "vuedraggable": "^2.24.3"
